# render

./: CMakeLists.txt  graphics.c  graphics.h  main.c  readme.md
res/: dragon.mtl
